--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "preview": "vite preview --port 5173"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.26.1"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
+    "react-router-dom": "^6.26.1",
     "vite": "^5.4.5"
-  }
+  },
+  "devDependencies": {}
 }
